adicionando a cor preta como a primeira cor da paleta de cores

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 }
 
 .first-block {
-  background-color: red;
+  background-color: black;
   width: 100px;
   height: 100px;
 }
@@ -16,7 +16,7 @@
 }
 
 .third-block {
-  background-color: blue;
+  background-color: red;
   width: 100px;
   height: 100px;
 }
