--- a/style.css
+++ b/style.css
@@ -26,3 +26,22 @@
   width: 100px;
   height: 100px;
 }
+
+#pixel-board {
+  display: table;
+  border-spacing: 1px;
+  background-color: black;
+  border: 1px solid black;
+}
+
+.line {
+  display: table-row;
+}
+
+.pixel {
+  display: table-cell;
+  background-color: white;
+  width: 40px;
+  height: 40px;
+  border: 1px solid black;
+}
