--- a/style.css
+++ b/style.css
@@ -28,18 +28,10 @@
 }
 
 #pixel-board {
-  display: table;
-  border-spacing: 1px;
-  background-color: black;
-  border: 1px solid black;
-}
-
-.line {
-  display: table-row;
+  display: grid;
 }
 
 .pixel {
-  display: table-cell;
   background-color: white;
   width: 40px;
   height: 40px;
